fix some layout bugs

--- a/src/resources/voucherShow.scss
+++ b/src/resources/voucherShow.scss
@@ -14,6 +14,9 @@
 
   .voucher-show-content{
     padding: 1em;
+    strong{
+      font-weight: 700;
+    }
   }
   
   .store-content{
